Fix icon service. Fix number of participants on the profile. Align username in dropdown.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -505,6 +505,9 @@ body > .navbar-default {
     height: 30px
 }
 
+#usernameField {
+    text-align: center;
+}
 
 footer {
     padding: 10px;
